--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "./angular-proxy.config.mjs"
+          },
           "configurations": {
             "production": {
               "buildTarget": "atelier-devs-ui:build:production"
